# copylockscreen

./: README.md  pyproject.toml
src/copylockscreen/: __init__.py  __main__.py  dup_check.py  fetch_img.py  logger.py  save_img.py  wallpaper.py
src/copylockscreen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
